--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-bscroll",
-  "version": "1.0.7",
+  "name": "react-bscroll-p",
+  "version": "1.0.0",
   "description": "react-bscroll ui component for react",
   "keywords": [
     "react",
@@ -12,10 +12,10 @@
     "lib"
   ],
   "main": "lib/react-bscroll.js",
-  "homepage": "https://soluteli.github.io/rc-bscroll/",
-  "author": "soluteli@163.com",
-  "repository": "https://github.com/soluteli/react-bscroll.git",
-  "bugs": "https://github.com/soluteli/react-bscroll/issues",
+  "homepage": "https://github.com/catgrand/react-bscroll",
+  "author": "747356750@qq.com",
+  "repository": "https://github.com/catgrand/react-bscroll.git",
+  "bugs": "https://github.com/catgrand/react-bscroll/issues",
   "dependencies": {
     "better-scroll": "^1.12.1"
   },
